--- a/src/test/resources/jdbc.properties
+++ b/src/test/resources/jdbc.properties
@@ -1,10 +1,10 @@
-jdbc.driverClassName=${jdbc.driverClassName}
-jdbc.url=${jdbc.url}
-jdbc.username=${jdbc.username}
-jdbc.password=${jdbc.password}
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost/blackboard?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=
 
-hibernate.dialect=${hibernate.dialect}
-hibernate.connection.username=${jdbc.username}
-hibernate.connection.password=${jdbc.password}
-hibernate.connection.url=${jdbc.url}
-hibernate.connection.driver_class=${jdbc.driverClassName}
+hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+hibernate.connection.username=root
+hibernate.connection.password=
+hibernate.connection.url=jdbc:mysql://localhost/blackboard?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8
+hibernate.connection.driver_class=com.mysql.jdbc.Driver
