--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>org.dlw.ai.blackboard</groupId>
     <artifactId>blackboard</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-RC</version>
     <name>Blackboard</name>
     <inceptionYear>2010</inceptionYear>
     <url>http://www.dlwhitehurst.com</url>
@@ -331,6 +331,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.6</version>
                 <configuration>
                     <outputEncoding>UTF-8</outputEncoding>
                     <configLocation>checkstyle.xml</configLocation>
@@ -338,12 +339,14 @@
             </plugin>
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.7</version>
                 <configuration>
                     <outputEncoding>UTF-8</outputEncoding>
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.2</version>
                 <configuration>
                   <goal>jxr:jxr</goal>
                   <goal>jxr:test-jxr</goal>
@@ -352,6 +355,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-pmd-plugin</artifactId>
+                <version>2.5</version>
                 <configuration>
                     <linkXref>true</linkXref>
                     <targetJdk>1.5</targetJdk>
@@ -360,6 +364,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.7</version>
                 <configuration>
                     <outputEncoding>UTF-8</outputEncoding>
                 </configuration>
