--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,18 @@
                 </configuration>
             </plugin>
             <plugin>
+        		<artifactId>maven-site-plugin</artifactId>
+        		<version>3.0-beta-2</version>
+        		<executions>
+          		<execution>
+            		<id>attach-descriptor</id>
+            	<goals>
+              		<goal>attach-descriptor</goal>
+            	</goals>
+          		</execution>
+        		</executions>
+      		</plugin>
+            <plugin>
                 <artifactId>maven-eclipse-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
@@ -195,9 +207,18 @@
             <id>central</id>
             <url>http://repo1.maven.org/maven2</url>
         </repository>
+        <repository>
+            <id>dlw</id>
+            <url>http://dlwhitehurst.com/repo</url>
+        </repository>
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>org.dlw</groupId>
+            <artifactId>svs-utility</artifactId>
+            <version>1.0.0-RC</version>
+        </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
