--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,28 @@
 .settings
 .classpath
 .project
+doc/allclasses-frame.html
+
+doc/allclasses-noframe.html
+
+doc/constant-values.html
+
+doc/deprecated-list.html
+
+doc/help-doc.html
+
+doc/index-files/index-1.html
+
+doc/index-files/index-10.html
+
+doc/index-files/index-11.html
+
+doc/index-files/index-12.html
+
+*.html
+
+doc/package-list
+
+doc/resources/inherit.gif
+
+doc/stylesheet.css
