--- a/src/test/resources/jdbc.properties
+++ b/src/test/resources/jdbc.properties
@@ -1,10 +1,10 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost/blackboard?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=
+jdbc.password=DevPrince0706
 
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.connection.username=root
-hibernate.connection.password=
+hibernate.connection.password=DevPrince0706
 hibernate.connection.url=jdbc:mysql://localhost/blackboard?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
