--- a/pom.xml
+++ b/pom.xml
@@ -33,17 +33,37 @@
             <timezone>-6</timezone>
         </developer>
     </developers>
-    
+
+    <properties>
+        <commons.lang.version>2.4</commons.lang.version>
+        <commons.beanutils.version>1.8.0</commons.beanutils.version>
+        <commons.collections.version>3.2</commons.collections.version>
+        <commons.dbcp.version>1.2.1</commons.dbcp.version>
+        <commons.fileupload.version>1.2.1</commons.fileupload.version>
+        <commons.io.version>1.3.2</commons.io.version>
+        <dbunit.dataTypeFactoryName>org.dbunit.dataset.datatype.DefaultDataTypeFactory</dbunit.dataTypeFactoryName>
+        <dbunit.operation.type>CLEAN_INSERT</dbunit.operation.type>
+        <dbunit.schema>blackboard</dbunit.schema>
+        <ehcache.version>1.5.0</ehcache.version>
+        <hibernate.version>3.3.1.GA</hibernate.version>
+        <hibernate.annotations.version>3.4.0.GA</hibernate.annotations.version>
+        <hibernate.entitymanager.version>3.4.0.GA</hibernate.entitymanager.version>
+        <hibernate.dialect>org.hibernate.dialect.MySQL5InnoDBDialect</hibernate.dialect>
+        <jdbc.groupId>mysql</jdbc.groupId>
+        <jdbc.artifactId>mysql-connector-java</jdbc.artifactId>
+        <jdbc.version>5.1.48</jdbc.version>
+        <jdbc.driverClassName>com.mysql.jdbc.Driver</jdbc.driverClassName>
+        <jdbc.url><![CDATA[jdbc:mysql://127.0.0.1/blackboard?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8]]></jdbc.url>
+        <jdbc.username>root</jdbc.username>
+        <jdbc.password>DevPrince0706</jdbc.password>
+        <jpa.version>1.0</jpa.version>
+        <maven.test.skip>false</maven.test.skip>
+        <spring.version>2.5.6</spring.version>
+    </properties>
+
     <build>
         <defaultGoal>install</defaultGoal>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.7</version>
-                <configuration>
-                </configuration>
-            </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.0.2</version>
@@ -63,33 +83,6 @@
                       <mainClass>org.dlw.ai.blackboard.Main</mainClass>
                     </manifest>
                   </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-        		<artifactId>maven-site-plugin</artifactId>
-        		<version>3.0-beta-2</version>
-        		<executions>
-          		<execution>
-            		<id>attach-descriptor</id>
-            	<goals>
-              		<goal>attach-descriptor</goal>
-            	</goals>
-          		</execution>
-        		</executions>
-      		</plugin>
-            <plugin>
-                <artifactId>maven-eclipse-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <additionalProjectnatures>
-                        <projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
-                    </additionalProjectnatures>
-                    <additionalBuildcommands>
-                        <buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>
-                    </additionalBuildcommands>
-                    <downloadSources>true</downloadSources>
-                    <downloadJavadocs>true</downloadJavadocs>
-                    <wtpversion>1.5</wtpversion>
                 </configuration>
             </plugin>
             <plugin>
@@ -166,6 +159,8 @@
                 <directory>src/main/resources</directory>
                 <includes>
                     <include>application-context.xml</include>
+                    <include>jdbc.properties</include>
+                    <include>hibernate.cfg.xml</include>
                     <include>log4j.xml</include>
                 </includes>
                 <filtering>false</filtering>
@@ -184,11 +179,7 @@
     <repositories>
         <repository>
             <id>central</id>
-            <url>http://repo1.maven.org/maven2</url>
-        </repository>
-        <repository>
-            <id>dlw</id>
-            <url>http://dlwhitehurst.com/repo</url>
+            <url>https://repo1.maven.org/maven2</url>
         </repository>
     </repositories>
 
@@ -211,7 +202,7 @@
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
-            <version>1.1.1</version>
+            <version>1.2</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -319,79 +310,7 @@
             <artifactId>ehcache</artifactId>
             <version>${ehcache.version}</version>
         </dependency>
-        
     </dependencies>
 
-    <reporting>
-        <plugins>
-            <plugin>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <outputEncoding>UTF-8</outputEncoding>
-                    <configLocation>checkstyle.xml</configLocation>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.7</version>
-                <configuration>
-                    <outputEncoding>UTF-8</outputEncoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-jxr-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                  <goal>jxr:jxr</goal>
-                  <goal>jxr:test-jxr</goal>
-                    <outputEncoding>UTF-8</outputEncoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>2.5</version>
-                <configuration>
-                    <linkXref>true</linkXref>
-                    <targetJdk>1.5</targetJdk>
-                    <outputEncoding>UTF-8</outputEncoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.7</version>
-                <configuration>
-                    <outputEncoding>UTF-8</outputEncoding>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
-
-    <properties>
-        <commons.lang.version>2.4</commons.lang.version>
-        <commons.beanutils.version>1.8.0</commons.beanutils.version>
-        <commons.collections.version>3.2</commons.collections.version>
-        <commons.dbcp.version>1.2.1</commons.dbcp.version>
-        <commons.fileupload.version>1.2.1</commons.fileupload.version>
-        <commons.io.version>1.3.2</commons.io.version>
-
-        <dbunit.dataTypeFactoryName>org.dbunit.dataset.datatype.DefaultDataTypeFactory</dbunit.dataTypeFactoryName>
-        <dbunit.operation.type>CLEAN_INSERT</dbunit.operation.type>
-        <ehcache.version>1.5.0</ehcache.version>
-        <hibernate.version>3.3.1.GA</hibernate.version>
-        <hibernate.annotations.version>3.4.0.GA</hibernate.annotations.version>
-        <hibernate.entitymanager.version>3.4.0.GA</hibernate.entitymanager.version>
-        <hibernate.dialect>org.hibernate.dialect.MySQL5InnoDBDialect</hibernate.dialect>
-        <jdbc.groupId>mysql</jdbc.groupId>
-        <jdbc.artifactId>mysql-connector-java</jdbc.artifactId>
-        <jdbc.version>5.1.6</jdbc.version>
-        <jdbc.driverClassName>com.mysql.jdbc.Driver</jdbc.driverClassName>
-        <jdbc.url><![CDATA[jdbc:mysql://localhost/blackboard?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8]]></jdbc.url>
-        <jdbc.username>root</jdbc.username>
-        <jdbc.password/>
-        <jpa.version>1.0</jpa.version>
-        <spring.version>2.5.6</spring.version>
-
-    </properties>
 
 </project>
